# chatbot_agent

./: .gitignore  .pre-commit-config.yaml  README.md  atividades.txt  chatbot-ui.py  classes.dot  env_template  main.py  packages.dot  pyproject.toml
agent/: __init__.py
agent/environment/: __init__.py
agent/environment/database/: __init__.py
chatbot_agent/: __init__.py  consts.py  graph.py  graph.txt
chatbot_agent/chain/: __init__.py  create_chains.py  retrival_grader.py
chatbot_agent/environment/database/: ingestion.py
chatbot_agent/instructions/: __init__.py  instructions.py  system_message_template.py
chatbot_agent/nodes/: __init__.py  create_nodes.py
chatbot_agent/structured_output/: __init__.py  models.py
test/: test_generate.py  test_grader.py  test_retriever.py  test_retrivier.py  test_rewrite_question_rag.py  test_route_documentation.py  test_route_python.py
