[project]
name = "langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pre-commit>=4.5.1", "ruff>=0.14.14"]

[tool.ruff]
line-length = 88

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    # When using Ruff as a formatter, we recommend avoiding the following lint rules
    # (https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
    "W191",   # tab-indentation
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "D206",   # docstring-tab-indentation
    "D300",   # triple-single-quotes
    "Q000",   # bad-quotes-inline-string
    "Q001",   # bad-quotes-multiline-string
    "Q002",   # bad-quotes-docstring
    "Q003",   # avoidable-escaped-quote
    "COM812", # missing-trailing-comma
    "COM819", # prohibited-trailing-comma
    #"ISC002", # ver
    # Ignora pois não identifica PT-BR
    "D401", # non-imperative-mood
]
