[project]
name = "chatbot_agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.61.0",
    "langchain>=1.2.7",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.7",
    "panel>=1.8.7",
    "pre-commit>=4.5.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.14",
    "unstructured>=0.21.5",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
date_format = "%Y-%m-%d %H:%M:%S"



[tool.ruff]
line-length = 88
exclude = ["test/**"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    # When using Ruff as a formatter, we recommend avoiding the following lint rules
    # (https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
    "W191",   # tab-indentation
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "D206",   # docstring-tab-indentation
    "D300",   # triple-single-quotes
    "Q000",   # bad-quotes-inline-string
    "Q001",   # bad-quotes-multiline-string
    "Q002",   # bad-quotes-docstring
    "Q003",   # avoidable-escaped-quote
    "COM812", # missing-trailing-comma
    "COM819", # prohibited-trailing-comma
    #"ISC002", # ver
    # Ignora pois não identifica PT-BR
    "D401", # non-imperative-mood
]
